Add linking user profile and Add status bar
